✨chore: concludes development of login and signup page

--- a/.env
+++ b/.env
@@ -4,6 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+POSTGRES_USERNAME='postgres'
+POSTGRES_PASSWORD='senhasecreta'
+POSTGRES_URL='localhost'
+POSTGRES_PORT='5432'
+POSTGRES_DATABASE='obrasmart'
 
+JWT_SECRET_KEY='top_secret'
 
-DATABASE_URL="postgresql://postgres:senhasecreta@localhost:5432/obrasmart?schema=public"
+DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_URL}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
