✨chore: created docker container

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 POSTGRES_USERNAME='postgres'
 POSTGRES_PASSWORD='senhasecreta'
-POSTGRES_URL='localhost'
+POSTGRES_URL='postgres'
 POSTGRES_PORT='5432'
 POSTGRES_DATABASE='obrasmart'
 
