✨chore: update dockercompose file

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ POSTGRES_PASSWORD='senhasecreta'
 POSTGRES_URL='postgres'
 POSTGRES_PORT='5432'
 POSTGRES_DATABASE='obrasmart'
+PORT='5000'
 
 JWT_SECRET_KEY='top_secret'
 
